[metadata]
name = molhighlighter
description = Fancy colored substructure highlights with labels
author = Cédric Bouysset
author_email = bouysset.cedric@gmail.com
license = Apache License, Version 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cbouy/molhighlighter
project_urls = 
    Issues = https://github.com/cbouy/molhighlighter/issues
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    science
    chemistry
    chemoinformatics

[options]
packages = molhighlighter

python_requires = >=3.6
zip_safe = True
